Add general responsive

--- a/index.html
+++ b/index.html
@@ -133,22 +133,22 @@
 
             <div class="container my-4">
                 <div class="row g-4">
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <img class="d-block img-fluid rounded-4 border border-2 border-primary img-thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
-                    <div class="col-4">
+                    <div class="col-6 col-sm-4">
                         <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                 </div>
@@ -159,39 +159,44 @@
          <section id="discover">
             <div class="container my-4">
                 <div class="explore-titles text-center my-5">
-                    <h5>PLAY HAS NO LIMITS</h5>
+                    <h6 class="text-primary">PLAY HAS NO LIMITS</h6>
                     <h2>Ecco la PlayStation 5</h2>
                     <p>Tuffati in nuove possibilità di gioco compeltamente inaspettate</p>
                 </div>
 
-                <div class="row g-2">
-                    <div class="col-12">
-                        <div class="col-12">
+                <div class="row g-2 align-items-center">
+                    <div class="col-12 col-md-6">
+                        <div>
                             <h2>Console PlayStation 5</h2>
                             <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
                             <button class="btn btn-primary rounded-4">Maggiori informazioni</button>
                         </div>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-6">
                         <img class="d-block img-fluid " src="img/playstation-5-thumb.png" alt="">
                     </div>
                 </div>
 
-                <div class="row g-2 my-4 ">
+                <div class="row row-cols-md-5 g-3 my-4 text-center">
                     <div class="col-4">
                         <img  class="d-block img-fluid " src="./img/playstation-5-thumb.png" alt="">
+                        <h5 class="d-none d-md-block">Console PS5</h5>
                     </div>
                     <div class="col-4">
                         <img  class="d-block img-fluid " src="./img/joypad-thumb.png" alt="">
+                        <h5 class="d-none d-md-block">Controller<br>Wireless<br>DualSense&trade;</h5>
                     </div>
                     <div class="col-4">
                         <img  class="d-block img-fluid " src="./img/headset-thumb.png" alt="">
+                        <h5 class="d-none d-md-block">Cuffie Wireless<br>con microfoon<br>PULSE 3&trade;</h5>
                     </div>
                     <div class="col-4">
                         <img  class="d-block img-fluid " src="./img/remote-thumb.png" alt="">
+                        <h5 class="d-none d-md-block">Telecomando<br>Media</h5>
                     </div>
                     <div class="col-4">
                         <img  class="d-block img-fluid " src="./img/camera-thumb.jpg" alt="">
+                        <h5 class="d-none d-md-block">Telecamera HD</h5>
                     </div>
                 </div>
             </div>
@@ -278,21 +283,21 @@
                     </p>
                 </div>
 
-                <div class="row g-4 mb-4">
-                    <div class="col-12">
+                <div class="row g-4 mb-4 text-center align-items-center">
+                    <div class="col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
                         <h3>PlayStation 3</h3>
                         <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione</p>
                         <button class="btn btn-primary rounded-4 ">Scopri di più</button>
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/double11-202010-tw-psvr.jpg" alt="">
                         <h3>PlayStation VR</h3>
                         <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
                         <button class="btn btn-primary rounded-4 ">Scopri di più</button>
                     </div>
-                    <div class="col-12">
-                        <img class="d-block img-fluid" src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                    <div class="col-12 col-md-4">
+                        <img class="d-md-block img-fluid" src="./img/dualshock-4-listing-thumb.jpg" alt="">
                         <h3>Accessori</h3>
                         <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
                         <button class="btn btn-primary rounded-4 ">Scopri di più</button>
@@ -304,14 +309,14 @@
          <!-- Sezione PS-Plus-->
          <section id="ps-plus" class="mb-4">
             <div class="container">
-                    <div class="row row-cols-2 align-items-center">
-                    <div>
-                        <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="">
+                    <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <img style="height: 50px;" class="d-block mb-2" src="img/ps-plus-logo.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates sit explicabo. Iusto, dolores quia pariatur officia ad omnis nihil!</p>
                         <button class="btn btn-primary rounded-4 mb-2">Scopri di più</button>
                     </div>
-                    <div>
-                        <img class="d-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                    <div class="col-md-6">
+                        <img class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
                     </div>
                 </div>
              </div>
@@ -326,13 +331,13 @@
                 </div>
 
                 <div class="row g-4 mb-4">
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
                     </div>
                 </div>
@@ -342,14 +347,14 @@
         <!-- Sezione PS-Now -->
         <section id="ps-now" class="text-white">
             <div class="container mb-4">
-                <div class="row row-cols-2 align-items-center">
-                    <div>
-                        <img class="d-block img-fluid" src="img/ps-now-logo-two-column.png" alt="">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <img style="height: 50px;" class="d-block mb-2" src="img/ps-now-logo-two-column.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates sit explicabo. Iusto, dolores quia pariatur officia ad omnis nihil!</p>
-                        <button class="btn btn-primary rounded-4 mb-2">Scopri di più</button>
+                        <button class="btn btn-light rounded-4 mb-2">Scopri di più</button>
                     </div>
-                    <div>
-                        <img class="d-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                    <div class="col-md-6">
+                        <img class="d-none d-md-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
                     </div>
                 </div>
             </div>
@@ -359,17 +364,17 @@
          <section id="social-media">
             <div class="container mb-4 text-center">
                 <h3>Seguici sui social</h3>
-                <div class="row row-cols-4 gx-4 gy-5">
-                    <div class="col-6">
+                <div class="row gx-4 gy-5">
+                    <div class="col-6 col-md-3">
                         <img class="d-block img-fluid" src="./img/twitter.jpg" alt="">
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3">
                         <img class="d-block img-fluid" src="./img/facebook.jpg" alt="">
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 col-md-3">
                         <img class="d-block img-fluid" src="./img/instagram.jpg" alt="">
                     </div> 
-                    <div class="col-6">
+                    <div class="col-6 col-md-3">
                         <img class="d-block img-fluid" src="./img/youtube.png" alt="">
                     </div>
                 </div>
@@ -380,32 +385,37 @@
     <footer>
         <div class="container py-4">
             <div class="row mb-3">
-                <div class="col-12">
+                <div class="col-12 col-lg-6">
                         <img class="d-block img-fluid" src="./img/ps-footer.svg" alt="">
                         <div class="d-flex align-items-center my-5">
                         <img style="height: 30px;" src="./img/language-globe.svg" alt="">
                         <span class="ps-3">Country / Region: Italy</span>
                     </div>
                 </div>
-                 <div class="col-12">
+                 <div class="col-12 col-md-4 col-lg-2">
                         <ul>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                         </ul>
+                </div>
+                <div class="col-12 col-md-4 col-lg-2">
                         <ul>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                         </ul>
+                </div>
+                <div class="col-12 col-md-4 col-lg-2">
                         <ul>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                             <li>Item</li>
                         </ul>
+                </div>
                 </div>
             </div>
             <div>
