Minor fix to css

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     </ul>
                     </li>
                 </ul>
-                <div class="nav-bar-right d-flex align-items-center">
+                <div class="nav-bar-right d-flex align-items-center gap-2">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -108,7 +108,7 @@
                     </li>
                     </ul>
                     <button class="btn btn-dark rounded-4">Accedi</button>
-                    <img style="height: 30px;"  src="./img/lens.svg" alt="">
+                    <img src="./img/lens.svg" alt="">
                 </div>
                 </div>
             </div>
@@ -313,11 +313,11 @@
                     <div class="row align-items-center">
                     <div class="col-md-6 py-5 py-md-0">            
                         <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates sit explicabo. Iusto, dolores quia pariatur officia ad omnis nihil!</p>
-                        <button class="btn btn-primary rounded-4 mb-2">Scopri di più</button>
+                        <p class="fs-6 fw-semibold">Migliora la tua esperienza PlayStation con l'accesso a multiigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <button class="btn btn-light text-primary fw-semibold rounded-5 mb-2">Esplora PlayStation Plus</button>
                     </div>
                     <div class="col-md-6">
-                         <img style="height: 100%;" class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                         <img class="d-none d-md-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
                     </div>
                 </div>
              </div>
@@ -389,7 +389,7 @@
                 <div class="col-12 col-lg-6">
                         <img class="d-block img-fluid" src="./img/ps-footer.svg" alt="">
                         <div class="d-flex align-items-center my-5">
-                        <img style="height: 30px;" src="./img/language-globe.svg" alt="">
+                        <img src="./img/language-globe.svg" alt="">
                         <span class="ps-2">Country / Region: Italy</span>
                     </div>
                 </div>
@@ -420,7 +420,7 @@
             </div>
 
             <div class="disclaimer">
-                <img class="d-block" style="height: 50px;" src="./img/sie-logo.svg" alt="">
+                <img class="d-block" src="./img/sie-logo.svg" alt="">
                 <p class="my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab eaque dolorem vel necessitatibus! Aut nobis rerum debitis iste ducimus itaque, sit sed quod iusto perferendis. Expedita dolor magni minima?</p>
             </div>
 
