Add CSS effects

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <section id="highlight">
             <div class="highlight-jumbo">
                     <div class="highlight-jumbo-contents container text-white d-flex align-items-end pb-5">
-                      <div>
+                      <div class="jumbo-internal-container">
                         <img class="my-4" src="./img/returnal-hero-banner-logo.png" alt="Returnal Game logo">
                         <h2 class="fs-1 my-2">Rompi il cerchio</h2>
                         <p class="my-5">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
@@ -135,22 +135,22 @@
             <div class="container my-4">
                 <div class="row g-4">
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-4 border border-2 border-primary img-thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                       <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                       <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                       <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-4 col-lg-2">
-                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-4" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -179,25 +179,25 @@
                 </div>
 
                 <div class="row row-cols-md-5 g-3 my-5 text-center">
-                    <div class="col-4">
-                        <img  class="d-block img-fluid " src="./img/playstation-5-thumb.png" alt="">
-                        <h5 class="d-none d-md-block fs-6 text-secondary">Console PS5</h5>
+                    <div class="device col-4">
+                        <img  class="d-block img-fluid" src="./img/playstation-5-thumb.png" alt="">
+                        <h5 class="d-none d-md-block fs-6">Console PS5</h5>
                     </div>
-                    <div class="col-4">
-                        <img  class="d-block img-fluid " src="./img/joypad-thumb.png" alt="">
-                        <h5 class="d-none d-md-block fs-6 text-secondary">Controller Wireless<br>DualSense&trade;</h5>
+                    <div class="device col-4">
+                        <img  class="d-block img-fluid" src="./img/joypad-thumb.png" alt="">
+                        <h5 class="d-none d-md-block fs-6">Controller Wireless<br>DualSense&trade;</h5>
                     </div>
-                    <div class="col-4">
-                        <img  class="d-block img-fluid " src="./img/headset-thumb.png" alt="">
-                        <h5 class="d-none d-md-block fs-6 text-secondary">Cuffie Wireless<br>con microfoon<br>PULSE 3&trade;</h5>
+                    <div class="device col-4">
+                        <img  class="d-block img-fluid" src="./img/headset-thumb.png" alt="">
+                        <h5 class="d-none d-md-block fs-6">Cuffie Wireless<br>con microfoon<br>PULSE 3&trade;</h5>
                     </div>
-                    <div class="col-4">
-                        <img  class="d-block img-fluid " src="./img/remote-thumb.png" alt="">
-                        <h5 class="d-none d-md-block fs-6 text-secondary">Telecomando<br>Media</h5>
+                    <div class="device col-4">
+                        <img  class="d-block img-fluid" src="./img/remote-thumb.png" alt="">
+                        <h5 class="d-none d-md-block fs-6">Telecomando<br>Media</h5>
                     </div>
-                    <div class="col-4">
-                        <img  class="d-block img-fluid " src="./img/camera-thumb.jpg" alt="">
-                        <h5 class="d-none d-md-block fs-6 text-secondary">Telecamera HD</h5>
+                    <div class="device col-4">
+                        <img  class="d-block img-fluid" src="./img/camera-thumb.jpg" alt="">
+                        <h5 class="d-none d-md-block fs-6">Telecamera HD</h5>
                     </div>
                 </div>
             </div>
@@ -207,7 +207,7 @@
          <section id="new-publications">
             <div class="new-publications-jumbo">
                     <div class="new-publications-jumbo-contents container text-white d-flex align-items-center gap-5">
-                        <div>
+                      <div class="jumbo-internal-container">
                       <img class="my-4" src="./img/it-takes-two-logo.png" alt="It takes two game logo">
                       <h2 class="fs-1 my-2">Rompi il cerchio</h2>
                       <p class="my-5">Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
@@ -223,52 +223,52 @@
                 <h4 class="fs-5 my-4">Giochi incredibili per PS4 e PS5 disponibili ora</h4>
                 <div class="row g-4 text-center pb-4">
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                     <div class="col-4 col-lg-2">
-                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
-                        <h5 class="fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
+                        <img class="thumb d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="thumb fs-6 my-2">Crash Bandicoot 4: It's about time!</h5>
                     </div>
                 </div>
             </div>
@@ -332,13 +332,13 @@
                 </div>
 
                 <div class="row g-4 my-5">
-                    <div class="col-12 col-md-4">
+                    <div class="discount-fx col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="discount-fx col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="discount-fx col-12 col-md-4">
                         <img class="d-block img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
                     </div>
                 </div>
